@@ -1,2 +1,3 @@
 usr/lib/matlab/site/gdf
+usr/share/matlab/site/m/gdf
 usr/src/matlab/gdf
