@@ -2,29 +2,23 @@
 set -e
 umask 002
 
-# Build the MEX files
-# logfile=$(mktemp mktemp matlab-gdf-XXXXXX)
-distdir=/usr/lib/matlab/site/gdf
+distdir=/usr/share/matlab/site/m/gdf
 
-cd /usr/src/matlab/gdf
+case "$1" in
+    configure)
+        debian-matlab-mexhelper gdf install \
+            --build-cmd 'for f in *.cpp; do	mex $f -lGDF; done' \
+            --install-cmd "mv -t $distdir *.mex?*" \
+            --clean-cmd 'rm -f *.o *.a *.mex*'
+    ;;
 
-#if [ -z "$MATLAB_USER" ]
-#then
+    abort-upgrade|abort-remove|abort-deconfigure)
+    ;;
 
-echo "Building MEX extensions"
-for f in *.cpp; do
-	mex $f -lGDF
-done
-
-# remove possible junk
-rm -f *.o *.a
-# install extensions
-mv -t $distdir *.mex?*
-
-# install symlinks to /usr/share/gdf
-# for m in /usr/lib/gdf/*.mex?*; do
-# 	mbase=$(basename $m)
-# 	[ ! -L /usr/share/gdf/$mbase ] && ln -s ../../lib/gdf/$mbase /usr/share/gdf/$mbase
-# done
+    *)
+        echo "postinst called with unknown argument \`$1'" >&2
+        exit 1
+    ;;
+esac
 
 #DEBHELPER#
